fix: hide overflow on navigation

--- a/src/scss/components/navigation.scss
+++ b/src/scss/components/navigation.scss
@@ -9,6 +9,7 @@ nav.navigation{
 	align-items: center;
 	background: $gray-90;
 	border-radius: 16px;
+	overflow: hidden;
 	margin: $spacer-0 $spacer-2 $spacer-2 $spacer-2;
 	padding: $spacer-2;
 
